# video-player

./: .gitignore  CMakeLists.txt  README.md
src/: audio_player.hpp  frame_buffer.hpp  main.cpp  video_reader.hpp
